# PianoPlayer

./: .gitignore  LICENSE  README.md
home/snobots/unified-ros-platform/: piano.sh
home/snobots/unified-ros-platform/src/events/: CMakeLists.txt  package.xml
home/snobots/unified-ros-platform/src/events/config/iros2019/: action_configurations.json  piano_values.json  walking_configurations_adult.json  walking_configurations_kid.json
home/snobots/unified-ros-platform/src/events/launch/: iros2019.launch  piano_player.launch
home/snobots/unified-ros-platform/src/events/src/iros2019/: inverse_kinematics.py  iros2019_node.py  keys.py  piano_player_node.py  presentation.md  udp_connect.py
home/snobots/unified-ros-platform/src/iros_vision/: CMakeLists.txt  package.xml
home/snobots/unified-ros-platform/src/iros_vision/config/: camera_settings.yaml  piano_config.yaml
home/snobots/unified-ros-platform/src/iros_vision/launch/: piano_detector.launch
home/snobots/unified-ros-platform/src/iros_vision/msg/: ObjectCoords.msg
home/snobots/unified-ros-platform/src/iros_vision/src/: README.md
home/snobots/unified-ros-platform/src/iros_vision/src/piano_detector/: object_detection.py  piano_detector_node.py  vision.py  yaml_parser.py
